--- a/.env.template
+++ b/.env.template
@@ -1,11 +1,12 @@
-ENV=development
+ENV=template
 
 HTTP_ADDR=:8080
 
-DATABASE_URL=postgres://scanner:scannerpass@localhost:5432/secretscan
-REDIS_URL=redis://localhost:6379
+DATABASE_URL=postgres://scanner:scannerpass@localhost:5432/secretscan # example db (postgres)
 
 SCAN_MAX_REPO_MB=50
 SCAN_MAX_FILE_KB=512
 SCAN_MAX_CONCURRENT=3
 REVOCATION_ENABLED=false
+
+GITHUB_TOKEN=
