--- a/.env.template
+++ b/.env.template
@@ -7,6 +7,5 @@ DATABASE_URL=postgres://scanner:scannerpass@localhost:5432/secretscan # example 
 SCAN_MAX_REPO_MB=50
 SCAN_MAX_FILE_KB=512
 SCAN_MAX_CONCURRENT=3
-REVOCATION_ENABLED=false
 
-GITHUB_TOKEN=
+GITHUB_TOKEN= # rate limits
